Z-index fix

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,6 +3,7 @@
   left: 0;
   width: 100%;
   position: fixed;
+  z-index: 2;
 }
 
 .container nav {
